2008-04-05  Jonathon Jongsma  <jjongsma@gnome.org>

	* src/gtkhex.c: fix a bug where the selection would always start at 0 if
	the user only used the keyboard.  To reproduce, navigate away from the start
	of the document, then press Shift+Down, and the text will be selected, but
	instead of starting the selection from where the cursor was when you pressed
	Down, it would start from the beginning of the file.

2008-04-09  Jonathon Jongsma  <jjongsma@gnome.org>
i
	* src/gtkhex.c (draw_shadow, gtk_hex_size_allocate): Fix the allocation code
	to allocate the child widgets relative to the GtkHex allocation.x and
	allocation.y coordinates instead of (0,0).  Fixes Bug #527272

2008-04-12  Jonathon Jongsma  <jjongsma@gnome.org>

	* src/gtkhex.c (draw_shadow): remove the call to gdk_window_clear_area()
	since it can sometimes result in the background between the hex and ascii
	widgets becoming dark black.  Fixes Bug #527279

2008-04-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* src/Makefile.am: set G_LOG_DOMAIN for the shared libgtkhex library so that
	warning messages use the right domain

2008-04-10  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in: Up version to 2.22.0 for release

2008-02-26  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in: Up version to 2.21.92 for release

2008-02-26  Rodney Dawes  <dobey.pwns@gmail.com>

	* src/ghex-window.c (ghex_window_new):
	Pass DATADIR instead of PREFIX to bonobo_ui_util_set_ui
	Patch from Yuriy Penkin <yura.penkin@gmail.com>

	Fixes #515425

2008-01-30  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in: Up version to 2.21.90 for release

2008-01-30  Rodney Dawes  <dobey.pwns@gmail.com>

	* Makefile.am: Use GCONF_SCHEMA_FILE_DIR for schemadir

	Fixes #511529

2007-12-21  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in:
	* gtkhex.pc.in:
	Use the same version number for libgtkhex as ghex itself

2007-12-21  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in: Up version to 2.21.4 for release
